--- a/index.html
+++ b/index.html
@@ -231,18 +231,18 @@
 
   <section class="info">
     <div class="card">
-      <h3>🏗 Tradição e Confiança</h3>
-      <p>Há anos atendendo Avaré e região com materiais de qualidade, preços justos e atendimento próximo.</p>
+      <h3>🏗 Tradição</h3>
+      <p>Há mais de 40 anos atendendo Avaré e região. Preços justos e atendimento de excelência.</p>
     </div>
 
     <div class="card">
-      <h3>⭐ Prova Social</h3>
+      <h3>⭐ Confiança</h3>
       <p>Mais de 1.000 clientes atendidos, com alto índice de satisfação e recompra.</p>
     </div>
 
     <div class="card">
       <h3>📍 Onde Estamos</h3>
-      <p>Av. Industrial, 1450 – Distrito Industrial – Avaré/SP</p>
+      <p>Rua Goiás, 1441 – Avaré/SP</p>
     </div>
   </section>
 
@@ -269,8 +269,8 @@
       return;
     }
 
-    // >>> SUBSTITUA PELO NÚMERO REAL DA CONSTRUFIC
-    const telefone = '5514999999999';
+    // WhatsApp oficial: +55 14 99701-7434
+    const telefone = '5514997017434';
 
     const mensagem = encodeURIComponent(
       'Vim pela landing page da Construfic e estou buscando: ' + texto
@@ -286,7 +286,7 @@ RESUMO RÁPIDO:
 - index.html → esse arquivo
 - assets/logo.jpg → logo (500x200px)
 - assets/fachada.jpg → fachada (1600x900px)
-- Alterar o telefone no JS para o WhatsApp real
+- WhatsApp já configurado
 ======================================================= -->
 
 </body>
